# GgAdv2

./: .gitignore  CMakeLists.txt  git_pendding.patch  main.cpp  report.patch  test_fix.patch
ggBenchmark/: main.cpp
ggTest/: alu.cpp  branch.cpp  gg_test.h  interrupt.cpp  interrupt_and_misc.cpp  ldm.cpp  ldr.cpp  ldrh.cpp  main.cpp  memory_read.cpp  mov.cpp  mul_long.cpp  multiply.cpp  stm.cpp  str.cpp  strh.cpp  swap.cpp  unpredictable.cpp
ggTest/ARM/: alu.cpp  branch.cpp  interrupt_and_misc.cpp  ldm.cpp  ldr.cpp  ldrh.cpp  mul_long.cpp  multiply.cpp  stm.cpp  str.cpp  strh.cpp  swap.cpp  unpredictable.cpp
ggTest/Thumb/: Type1.cpp  Type2.cpp  Type3.cpp  Type4.cpp  thumb_test.cpp
ggTest/Thumb/testcases/: Type1.h  Type10.h  Type11.h  Type12.h  Type13.h  Type14.h  Type15.h  Type16.h  Type17.h  Type18.h  Type19.h  Type2.h  Type3.h  Type4.h  Type5.h  Type6.h  Type7.h  Type8.h  Type9.h
ggTest/include/: arm_encoder.h  loop_tool.h
include/: gba_bios.h  instruction_class.h
include/component/: cartridge.h  component_class.h  save_memory.h
include/component/cpu/: cpu.h  cpu_enum.h  cpu_status.h  opcode_fields.h  status.h
include/component/cpu/core/: arm_encoder_v2.h  arm_handler.hpp  cpu_tick.h  decoder.h
include/component/cpu/core/arm/: arm_decoder.h
include/component/cpu/core/arm/decoder/: branch.h  data_processing.h  memory_access.h  multiply.h  psr_transfer.h  software_interrupt.h
include/component/cpu/core/arm/implements/: v4_alu_implement.h  v4_branch_implement.h  v4_irq_implement.h  v4_mem_implement.h  v4_multiply_implement.h  v4_operand2.h  v4_psr_implement.h
include/component/cpu/core/thumb/decoder/: type1.h  type10.h  type11.h  type12.h  type13.h  type14.h  type15.h  type16.h  type17.h  type18.h  type19.h  type2.h  type3.h  type4.h  type5.h  type6.h  type7.h  type8.h  type9.h
include/component/cpu/core/thumb/implements/: v4t_format1.h  v4t_format10.h  v4t_format11.h  v4t_format12.h  v4t_format13.h  v4t_format14.h  v4t_format15.h  v4t_format16.h  v4t_format17.h  v4t_format18.h  v4t_format19.h  v4t_format2.h  v4t_format3.h  v4t_format4.h  v4t_format5.h  v4t_format6.h  v4t_format7.h  v4t_format8.h  v4t_format9.h
include/component/io/: io.h  io_enum.h
include/component/memory/: display_memory.h  eeprom.h  gamepak_memory.h  general_memory.h  handler_table.h  mem_enum.h  memory_exceptions.h  memory_region.h  mirror.h  mmu.h  mmu_status.h  sram.h
include/component/memory/handler/: bios_handler.h  ewram_handler.h  gamepak_handler.h  handler_table.h  io_handler.h  iwram_handler.h  mirror.h  oam_handler.h  palette_handler.h  sram_handler.h  vram_handler.h
include/component/sub_module/: timer.h  timers.h
include/component/sub_module/apu/: apu.h  apu_enum.h
include/component/sub_module/dma/: dma.h  dma2.h  dma_controller.h  dma_enum.h
include/component/sub_module/keypad/: keypad.h
include/component/sub_module/timer/: timer2.h
include/framework/: emu_framework.h  framework_base.h  gba_instance.h  gg_texture.h  logger.h  system_enum.h  task.h  task_runner.h
include/framework/KHR/: khrplatform.h
include/framework/glad/: glad.h
include/instruction/arm/: arm_instruction_table.h  arm_prototype.h  macro.h  v4_alu_api.h  v4_alu_implement.h  v4_block_transfer_implement.h  v4_branch_implement.h  v4_btransfer_implement.h  v4_half_transfer_implement.h  v4_interrupt_implement.h  v4_irq_api.h  v4_mem_api.h  v4_mul_implement.h  v4_mull_implement.h  v4_operand2.h  v4_psr_implement.h  v4_swap_implement.h  v4_swp_implement.h  v4_transfer_implement.h
include/instruction/arm/api/: v4_alu_api.h  v4_irq_api.h  v4_mem_api.h  v4_multiply_api.h  v4_operand2.h
include/utility/: arm_asm.h  bit_manipulate.h  file_access.h  gg_utility.h
script/: alu_implement.py  arm_instruction_analyze.py  arm_instruction_table.h  arm_insturtion_table_gen.py  half_transfer_implement.py  implement_gen.py  transfer_implement.py  typeCheck.py  v4Target.py  v4_alu_implement.h  v4_branch_implement.h  v4_btransfer_implement.h  v4_interrupt_implement.h  v4_mul_implement.h  v4_mull_implement.h  v4_psr_implement.h  v4_swp_implement.h  v4_transfer_implement.h
src/component/cpu/: cpu.cpp
src/component/memory/: io_handler.cpp  mmu.cpp
src/component/sub_module/: timers.cpp
src/component/sub_module/apu/: apu.cpp
src/component/sub_module/dma/: controller.cpp  dma.cpp  transfer_channel.cpp
src/component/sub_module/keypad/: keypad.cpp
src/component/sub_module/timer/: timer.cpp
src/cpu/: cpu.cpp  status.cpp
src/framework/: gba_instance.cpp  glad.c
src/framework/logger/: console_logger.cpp
tool/arm_analyzer/: json.hpp  main.cpp  result.json
tool/tool_script/: IOmap  generate_io_access_handler.py  static_bios_include_file_generator.py
